Correct spacing on bottom row cards

--- a/css/application.css
+++ b/css/application.css
@@ -127,9 +127,6 @@ i {
     color: #7B8B8E;
     font-weight: 300; }
 
-.java, #woo {
-  margin-left: 30px; }
-
 .java .topBar {
   background-color: #2C9676; }
 
