--- a/scss/layout/_cards.scss
+++ b/scss/layout/_cards.scss
@@ -22,9 +22,6 @@
  }
 }
 
-.java, #woo {
-  margin-left: 30px;
-}
 
 .java .topBar {
   background-color: $green;
